# 3DPrintf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  do_operations.cpp  do_operations.h  gitignore.txt  main.cpp  mesh.cpp  mesh.h  meshop_util.cpp  meshoperations.cpp  meshoperations.h  oversegmentation.cpp  submission-final.md  submission-milestone.md
boost/: README-3DPrintf.md
cmake_lists_reference/: CMakeLists_Windows.txt
config/3dprintf/: debug_armadillo_tetrahedralize.ini  debug_cow_tetrahedralize.ini  debug_peter_tetrahedralize.ini  debug_teapot_angular_distance.ini  debug_teapot_ao_face.ini  debug_teapot_smoothing_costs.ini  debug_teapot_support_costs_select_faces_test.ini  debug_teapot_support_costs_sideways.ini  debug_teapot_tetrahedralize.ini  debug_teapot_weighted_distance.ini  fabricate_cow.ini  initial_segmentation_bean.ini  initial_segmentation_bean_low_samples.ini  initial_segmentation_cow.ini  initial_segmentation_cow_fast.ini  initial_segmentation_cube.ini  initial_segmentation_simple_cow.ini  initial_segmentation_sphere.ini  initial_segmentation_sphere_low_samples.ini  initial_segmentation_teapot.ini  initial_segmentation_teapot_axis_only.ini  initial_segmentation_teapot_large_t.ini  initial_segmentation_teapot_low_samples.ini  initial_segmentation_teapot_low_samples_face_selection.ini  initial_segmentation_teapot_no_rays.ini  oversegmentation_bean.ini  oversegmentation_cube.ini  oversegmentation_gypsy_danger.ini  oversegmentation_simple_cow_seeds_only.ini  oversegmentation_sphere.ini  oversegmentation_teapot.ini  preprocess_bean.ini  preprocess_cube.ini  preprocess_simple_cow.ini  refined_segmentation_cow.ini  refined_segmentation_gipsy_danger.ini  refined_segmentation_gipsy_danger_fast.ini  refined_segmentation_gypsy_danger.ini  refined_segmentation_gypsy_danger_fast.ini  refined_segmentation_gypsy_danger_simple_fast.ini  (+5 more)
config/3dprintf/fabricate/: fabricate_armadillo.ini  fabricate_armadillo_fast.ini  fabricate_armadillo_subdivide.ini  fabricate_armadillo_subdivide_fast.ini  fabricate_bean.ini  fabricate_bean_fast.ini  fabricate_cow.ini  fabricate_cow_fast.ini  fabricate_cow_simple.ini  fabricate_cow_simple_fast.ini  fabricate_gypsy_danger.ini  fabricate_gypsy_danger_fast.ini  fabricate_gypsy_danger_simple.ini  fabricate_gypsy_danger_simple_fast.ini  fabricate_teapot.ini  fabricate_teapot_fast.ini
config/3dprintf/initial/: initial_armadillo.ini  initial_armadillo_fast.ini  initial_armadillo_subdivide.ini  initial_armadillo_subdivide_fast.ini  initial_bean.ini  initial_bean_fast.ini  initial_cow.ini  initial_cow_fast.ini  initial_cow_simple.ini  initial_cow_simple_fast.ini  initial_gypsy_danger.ini  initial_gypsy_danger_fast.ini  initial_gypsy_danger_simple.ini  initial_gypsy_danger_simple_fast.ini  initial_teapot.ini  initial_teapot_fast.ini
config/3dprintf/old/: debug_teapot_ao_edge.ini  debug_teapot_smoothing_costs.ini  debug_teapot_support_costs.ini  debug_teapot_support_costs_upside_down.ini  initial_segmentation_bean_low_samples.ini  initial_segmentation_cow_face_selection.ini  initial_segmentation_piranha_axis_only.ini  initial_segmentation_simple_cow_low_samples.ini  initial_segmentation_teapot.ini  initial_segmentation_teapot_face_selection.ini  initial_segmentation_teapot_large_t.ini  initial_segmentation_teapot_low_samples.ini  oversegmentation_cow.ini  oversegmentation_simple_cow.ini  oversegmentation_simple_cow_visualize_seeds.ini  preprocess_cow.ini  preprocess_cube.ini  preprocess_simple_cow.ini  preprocess_sphere.ini  refined_segmentation_bean.ini  refined_segmentation_gypsy_danger.ini  refined_segmentation_gypsy_danger_simple.ini  remesh_cow.ini
config/3dprintf/oversegmentation/: oversegmentation_armadillo.ini  oversegmentation_armadillo_fast.ini  oversegmentation_armadillo_subdivide.ini  oversegmentation_armadillo_subdivide_fast.ini  oversegmentation_bean.ini  oversegmentation_bean_fast.ini  oversegmentation_cow.ini  oversegmentation_cow_fast.ini  oversegmentation_cow_simple.ini  oversegmentation_cow_simple_fast.ini  oversegmentation_gypsy_danger.ini  oversegmentation_gypsy_danger_fast.ini  oversegmentation_gypsy_danger_simple.ini  oversegmentation_gypsy_danger_simple_fast.ini  oversegmentation_teapot.ini  oversegmentation_teapot_fast.ini
config/3dprintf/preprocess/: preprocess_armadillo.ini  preprocess_armadillo_fast.ini  preprocess_armadillo_subdivide.ini  preprocess_armadillo_subdivide_fast.ini  preprocess_bean.ini  preprocess_bean_fast.ini  preprocess_cow.ini  preprocess_cow_fast.ini  preprocess_cow_simple.ini  preprocess_cow_simple_fast.ini  preprocess_gypsy_danger.ini  preprocess_gypsy_danger_fast.ini  preprocess_gypsy_danger_simple.ini  preprocess_gypsy_danger_simple_fast.ini  preprocess_teapot.ini  preprocess_teapot_fast.ini
config/3dprintf/refined/: refined_armadillo.ini  refined_armadillo_fast.ini  refined_armadillo_subdivide.ini  refined_armadillo_subdivide_fast.ini  refined_bean.ini  refined_bean_fast.ini  refined_cow.ini  refined_cow_fast.ini  refined_cow_simple.ini  refined_cow_simple_fast.ini  refined_gypsy_danger.ini  refined_gypsy_danger_fast.ini  refined_gypsy_danger_simple.ini  refined_gypsy_danger_simple_fast.ini  refined_teapot.ini  refined_teapot_fast.ini
config/mesh/: remesh_cow.ini  remesh_peter.ini  simplify_cow.ini  simplify_peter.ini  simplify_sphere_full.ini  subdivide_icosahedron_4.ini  subdivide_icosahedron_5.ini
meshes/: gypsy_danger.obj.mtl  gypsy_danger_simple_fixed.obj.mtl
or-tools-mac/: README-3DPrintf.md
or-tools-windows/: README-3DPrintf.md
src/: do_operations.cpp  do_operations.h  fabrication.cpp  initialsegmentation.cpp  main.cpp  mesh.cpp  mesh.h  meshop_util.cpp  meshoperations.cpp  meshoperations.h  oversegmentation.cpp  preprocess.cpp  refined_segmentation.cpp  sanitycheck.cpp  visualize.cpp  xor_tools_subroutines.cpp
template_inis/final/: angular_test.ini  geodesic_test.ini  oversegmentation_cow.ini  remesh_cow.ini  remesh_peter.ini  simplify_cow.ini  simplify_peter.ini
